--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext {
+        kotlin_version = '1.3.72'
+        room_version = '2.2.5'
+        coroutines_version = '1.3.5'
+        nav_version = '2.2.2'
+        koin_version= '2.1.6'
+    }
     repositories {
         google()
         jcenter()
