--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         kotlin_version = '1.3.72'
         room_version = '2.2.5'
         coroutines_version = '1.3.5'
-        nav_version = '2.2.2'
+        nav_version = '2.3.0'
         koin_version= '2.1.6'
     }
     repositories {
@@ -14,6 +14,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
