--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,39 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
+        compileSdkVersion = 29
+        buildToolsVersion = '29.0.3'
+        minSdkVersion = 21
+        targetSdkVersion = 29
+        versionCode = 1
+        versionName = '1.0'
+
+        gradle_version = '4.0.1'
         kotlin_version = '1.3.72'
+        core_ktx_version = '1.3.1'
+        lifecycle_version = '2.2.0'
+        lifecycle_viewmodel_version = '2.3.0-alpha06'
+        junit_version = '4.13'
+        junit_ext_version = '1.1.1'
+        espresso_version = '3.2.0'
+        koin_version = '2.1.6'
         room_version = '2.2.5'
         coroutines_version = '1.3.5'
         nav_version = '2.3.0'
-        koin_version= '2.1.6'
+        material_version = '1.2.0'
+        appcompat_version = '1.2.0'
+        constraint_version = '1.1.3'
+        swipe_refresh_version = '1.1.0'
+        glide_version = '4.11.0'
+        retrofit_version = '2.9.0'
+        logger_interceptor_version = '4.8.0'
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.1"
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
