--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'androidx.navigation.safeargs.kotlin'
+apply plugin: 'koin'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
@@ -43,13 +45,13 @@ dependencies {
     // Test
     testImplementation "junit:junit:$rootProject.junit_version"
     androidTestImplementation "androidx.test.ext:junit:$rootProject.junit_ext_version"
+    androidTestImplementation "androidx.test:rules:$rootProject.junit_ext_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.espresso_version"
+    testImplementation "androidx.arch.core:core-testing:$rootProject.arch_core_version"
 
     // Koin
     implementation "org.koin:koin-android-viewmodel:$rootProject.koin_version"
-
-    // Room
-    implementation "androidx.room:room-runtime:$rootProject.room_version"
+    testImplementation "org.koin:koin-test:$rootProject.koin_version"
 
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutines_version"
