--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ buildscript {
         junit_version = '4.13'
         junit_ext_version = '1.1.1'
         espresso_version = '3.2.0'
+        arch_core_version = '2.1.0'
+        okhttp_version = '4.8.1'
         koin_version = '2.1.6'
         room_version = '2.2.5'
         coroutines_version = '1.3.5'
@@ -35,6 +37,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.koin:koin-gradle-plugin:$koin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
