--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,12 @@ buildscript {
         lifecycle_viewmodel_version = '2.3.0-alpha06'
         junit_version = '4.13'
         junit_ext_version = '1.1.1'
+        test_rule_version = '1.2.0'
         espresso_version = '3.2.0'
         arch_core_version = '2.1.0'
+        robolectric_version = '4.3'
+        fragment_version = '1.2.5'
+        mockito_version = '2.19.0'
         okhttp_version = '4.8.1'
         koin_version = '2.1.6'
         room_version = '2.2.5'
