--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ buildscript {
         glide_version = '4.11.0'
         retrofit_version = '2.9.0'
         logger_interceptor_version = '4.8.0'
+        shimmer_version = '0.5.0'
     }
     repositories {
         google()
